--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Ali Raza</title>
+        <title>Abdul Qadir</title>
         <meta name="theme-color" content="#779FA1"/>
         <meta name="viewport" content="initial-scale=0.9">
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-        <meta property="og:title" content="alirazamumtaz - Security Researcher"/>
-        <meta property="og:description" content="Linux Kernel Security Researcher working on n-day exploitation. Looking for opportunities to work on *OS Kernel Exploitation."/>
+        <meta property="og:title" content="0xnull007 - Security Researcher"/>
+        <meta property="og:description" content="Linux Kernel Security Researcher working on n-day exploitation."/>
         <meta property="og:description" content="https://www.kernel.org/theme/images/logos/favicon.png"/>
         <!-- external resources -->
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -48,42 +48,35 @@ body {
         <!-- the layer above the full screen particle.js  -->
         <div class="panel" id="main">
 
-            <!-- Illustration by https://www.instagram.com/kissdori/ -->
-            <!-- <img src="assets/images/me.png" height="200" width="200"/> -->
-            <p style="font-size: 50px; margin-bottom: 5px">Ali Raza</p>
-            <p style="padding-bottom: 5px"><i>Currently employed as a Security Researcher working on the Linux Kernel n-day exploitation.</i></p>
-
-
+            <p style="font-size: 50px; margin-bottom: 5px">Abdul Qadir</p>
+            <p style="padding-bottom: 5px"><i>A security researcher interested in Vulnerability Research, Linux Kernel n-day Exploitation, and Reverse Engineering.</i></p>
 
             <div class="interactive">
                 <!-- Icons by https://www.iconsdb.com/ -->
-                <a href="https://twitter.com/locus_x64" target="_blank"><img src="/assets/index/images/twitter.png" style="width: 51.2px; height: 51.2px"/></a>
+                <a href="https://twitter.com/0xnull007" target="_blank"><img src="/assets/index/images/twitter.png" style="width: 51.2px; height: 51.2px"/></a>
+
+                <!-- <span style="padding-right: 5px"></span>
+                <a href="https://www.linkedin.com/in/alirazamumtaz" target="_blank"><img src="/assets/index/images/linkedin.png" style="width: 51.2px; height: 51.2px"/></a> -->
 
                 <span style="padding-right: 5px"></span>
-                <a href="https://www.linkedin.com/in/alirazamumtaz" target="_blank"><img src="/assets/index/images/linkedin.png" style="width: 51.2px; height: 51.2px"/></a>
-
-                <span style="padding-right: 5px"></span>
-                <a href="https://github.com/locus-x64" target="_blank"><img src="/assets/index/images/github.png" style="width: 51.2px; height: 51.2px"/></a>
+                <a href="https://github.com/0xnull007" target="_blank"><img src="/assets/index/images/github.png" style="width: 51.2px; height: 51.2px"/></a>
                 
                 <span style="padding-right: 5px"></span>
-                <a href="mailto:elirazamumtaz@gmail.com" target="_blank"><img src="/assets/index/images/email.png" style="width: 51.2px; height: 51.2px"/></a>
+                <a href="mailto:0xabdulqadir@gmail.com" target="_blank"><img src="/assets/index/images/email.png" style="width: 51.2px; height: 51.2px"/></a>
 
             </div>
 
             <div style="margin-top: 30px" class="interactive">
 
                 <a href="posts"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px"> Posts</button></a>
-                <a href="/CV/Ali_Raza_CV.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">Resume</button></a>
+                <a href="/CV/Abdul_Qadir_Resume.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">Resume</button></a>
 
             </div>
 
         </div>
 
-    <!-- <script src="lib/regl.min.js"></script> -->
     <script src="lib/regl.js"></script>
-    <!-- <script type="module" src="assets/main.js"></script> -->
 
-        <!-- the full screen particle.js in the background -->
 <!--         <div id="particles-js"></div>
 
         <script src="/assets/global/script.js"></script>
