--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@ body {
 
             <div class="interactive">
                 <!-- Icons by https://www.iconsdb.com/ -->
-                <a href="https://twitter.com/0xnull007" target="_blank"><img src="/assets/index/images/twitter.png" style="width: 51.2px; height: 51.2px"/></a>
+                <a href="https://x.com/0xnull007" target="_blank"><img src="/assets/index/images/twitter.png" style="width: 51.2px; height: 51.2px"/></a>
 
-                <!-- <span style="padding-right: 5px"></span>
-                <a href="https://www.linkedin.com/in/alirazamumtaz" target="_blank"><img src="/assets/index/images/linkedin.png" style="width: 51.2px; height: 51.2px"/></a> -->
+                <span style="padding-right: 5px"></span>
+                <a href="https://www.linkedin.com/in/0xnull007" target="_blank"><img src="/assets/index/images/linkedin.png" style="width: 51.2px; height: 51.2px"/></a>
 
                 <span style="padding-right: 5px"></span>
                 <a href="https://github.com/0xnull007" target="_blank"><img src="/assets/index/images/github.png" style="width: 51.2px; height: 51.2px"/></a>
