--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
             <div style="margin-top: 30px" class="interactive">
 
                 <a href="posts"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px"> Posts</button></a>
-                <a href="/CV/Abdul_Qadir_Resume.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">Resume</button></a>
+                <!-- <a href="/CV/Abdul_Qadir_Resume.pdf"><button type="button" class="btn btn-outline-secondary" style="margin-bottom: 10px">Resume</button></a> -->
 
             </div>
 
